# paulstretch

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/paulstretch/: __init__.py  main.py
tests/: test_paulstretch.py
