[project]
name = "paulstretch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moritz Schaller", email = "kontakt@moritz-schaller.de" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
paulstretch = "paulstretch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
