[project]
name = "paulstretch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moritz Schaller", email = "kontakt@moritz-schaller.de" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "soundfile>=0.13.1",
]
